# geopol

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  chisla  cmake_install.cmake  geopol
src/: main.cpp  person.cpp  person.h
